# Strategy-Lab

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
laoma_signal_engine/: __init__.py  __main__.py  candidate_ledger.py  cli.py  micro_collector_daemon.py  pipeline.py  pipeline_funnel.py  research_db.py  runtime_health.py  scheduler_5m.py  strategy_pipeline.py  training_snapshot_sync.py
reuse_scripts/: cvd.py  divergence.py  fetch_binance_top50_vol.py  funding.py  fusion.py  ofi_cvd_divergence.py  ofi_cvd_fusion.py  oi.py  real_cvd_calculator.py  real_ofi_calculator.py  run_step2_volatility_scan.py
scripts/: audit_current_json_chain.py  audit_independent_three_line_downstream.py  laoma_runtime.ps1  run_micro_until_ready.py  step16_14_micro_training_backfill.py  step16_16_micro_500run_reaudit.py  step16_16_micro_training_enrich.py  step16_17_micro_spread_depth_enrich.py  step16_17_micro_spread_depth_reaudit.py  step16_22_micro_technical_reliability_enrich.py  step17_11_strategy4_gate_calibration_analysis.py  step19_29_strategy6_v2_tq_root_cause_review.py  step19_30_strategy6_v3_tq_root_cause_review.py  step19_32_strategy6_v3_2_tq_root_cause_review.py  step19_33_strategy6_v3_3_tq_generalization_review.py  step19_34_strategy6_loss_unclassified_decomposition.py  step19_35_strategy6_v3_4_tq_review.py  step19_36_strategy6_v3_5_tq_review.py  step19_37_strategy6_v3_6_tq_review.py  step19_43_46_trade_quality_v5_materialize.py  step19_trade_quality_v4_materialize.py  step21_45_strategy6_gate_tuning_run.py  (+89 more)
web/: index.html  (+3 more)
(+309 files in other folders)
